--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,172 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
+/node_modules/
 
 # production
 /build
 
+# Next.js specific
+/.next/
+/out/
+
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.pem
 
-# Next.js
-/.next
-/out
+# dotenv environment variables file
+.env*
+
+# local env files
+*.env.local
 
 # vercel
 .vercel
 
 # misc
-*.pem
+*.log
 
-# log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+# MacOS files
+.AppleDouble
+.LSOverride
 
-# local env files
+# Thumbnails
+._*
+
+# Files that might appear on the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# JetBrains
+.idea/
+*.iml
+
+# Visual Studio Code
+.vscode/
+
+# TypeScript compiled files
+*.tsbuildinfo
+
+# build scripts
+/scripts/
+
+# e2e
+/cypress/
+
+# lint
+.eslintcache
+
+# next.js
+.next/
+
+# storybook
+/storybook-static
+
+# compiled output
+/dist/
+/tmp/
+/out/
+
+# dotenv environment variables file
 .env
-.env.development
 .env.test
 .env.production
 
 # vercel
 .vercel
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# misc
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.seed
+*.pid.lock
 
 # misc
-*.swp
-*.bak
-*.tmp
-*.acn
-*.acr
-*.lnk
-*.plst
-*.config
+*.tgz
+.cache/
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
 
-# Yarn
-.yarn/*
-!.yarn/patches/
-!.yarn/plugins/
-!.yarn/releases/
-!.yarn/sdks/
-!.yarn/versions/
+# misc
+node_modules/
+
+# misc
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# yarn
+.yarn/cache/
+.yarn/unplugged/
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# misc
+*.log
 
 # macOS
 .DS_Store
