--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.node filter=lfs diff=lfs merge=lfs -text
+node_modules/.pnpm/@next+swc-darwin-x64@14.0.4/node_modules/@next/swc-darwin-x64/next-swc.darwin-x64.node filter=lfs diff=lfs merge=lfs -text
