Update .gitignore to exclude large files and directories
Former-commit-id: 620a555b8edd1f52d00e3d97fec115d0b4a5bdaa

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # dependencies
 node_modules/
+*.node
+skaffold
 
 # production
 /build
@@ -151,6 +153,8 @@ $RECYCLE.BIN/
 
 # misc
 node_modules/
+*.node
+skaffold
 
 # misc
 jspm_packages/
