--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
     "@types/formidable": "^3.4.5",
+    "antd": "^5.12.5",
     "firebase": "^10.7.1",
     "formidable": "^3.5.1",
     "next": "^13.5.6",
@@ -30,7 +31,7 @@
     "eslint": "^8.22.0",
     "eslint-config-next": "^13.5.1",
     "jest": "^29.3.1",
-    "postcss": "8.4.30",
+    "postcss": "^8.4.32",
     "tailwindcss": "3.3.3",
     "typescript": "^4.9.4"
   }
