--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
@@ -23,16 +25,23 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.5",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/selenium-webdriver": "^4.1.21",
     "autoprefixer": "10.4.15",
+    "bash": "^0.0.1",
     "daisyui": "^4.4.23",
-    "eslint": "^8.22.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "^13.5.1",
-    "jest": "^29.3.1",
+    "jenkins": "^1.0.2",
+    "jest": "^29.7.0",
+    "make": "^0.0.0",
     "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "selenium-webdriver": "^4.16.0",
     "tailwindcss": "3.3.3",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@types/node": "^18.11.17"
   }
 }
