--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write .",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -26,14 +27,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.11",
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/selenium-webdriver": "^4.1.21",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "autoprefixer": "10.4.15",
     "bash": "^0.0.1",
     "daisyui": "^4.4.23",
     "eslint": "^8.56.0",
     "eslint-config-next": "^13.5.1",
+    "eslint-plugin-react": "^7.33.2",
     "jenkins": "^1.0.2",
     "jest": "^29.7.0",
     "make": "^0.0.0",
@@ -41,7 +46,6 @@
     "prettier": "^3.1.1",
     "selenium-webdriver": "^4.16.0",
     "tailwindcss": "3.3.3",
-    "typescript": "^4.9.4",
-    "@types/node": "^18.11.17"
+    "typescript": "^4.9.4"
   }
 }
