--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.12.5",
     "firebase": "^10.7.1",
     "formidable": "^3.5.1",
+    "googleapis": "^129.0.0",
     "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
